# agentic-engine

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
agentic_engine/: __init__.py  cli.py  config.py  evals.py  logging.py  plugins.py  ratelimit.py  server.py  telemetry.py
agentic_engine/adapters/: __init__.py  base.py  dingtalk.py  feishu.py  telegram.py  wechat.py
agentic_engine/core/: __init__.py  agent.py  auth.py  cron.py  mcp.py  mcp_http.py  memory.py  orchestrator.py  permissions.py  postgres.py  pricing.py  rag.py  sessions.py  skills.py  tool.py  usage.py  worktree.py
agentic_engine/llm/: __init__.py
agentic_engine/teams/: __init__.py  dev_team.py  research_team.py
agentic_engine/tools/: __init__.py  bash.py  diff.py  files.py  screen.py  web.py
desktop/: README.md  tauri.conf.json
desktop/web/: index.html
docs/: CODE_REVIEW.md  architecture.md  cc-haha-architecture-study.md  changelog.md  index.md  quickstart.md  usage.md
docs/concepts/: agent.md  mcp.md  memory.md  permissions.md  sessions-cron.md  tools.md
docs/ops/: desktop.md  evals.md  observability.md  plugins.md  postgres.md  pricing.md
docs/reference/: api.md
docs/server/: auth.md  http.md  ratelimit.md  streaming.md
evals/golden/: basic.json
examples/: dev_team_demo.py  parallel_research.py  single_agent.py
scripts/: audit.sh
skills/code-review/: SKILL.md
skills/doc-writer/: SKILL.md
tests/: test_phase2.py  test_post_review.py  test_round2.py  test_smoke.py  test_v03.py
