[project]
name = "agentic-engine"
version = "0.2.0"
description = "An original multi-agent engineering framework inspired by industry patterns (CrewAI / AutoGen / LangGraph). Built on Bailian Qwen."
authors = [{ name = "Thibaultzhu" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0.0",
    "rich>=13.7",
    "typer>=0.12",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]
cron = ["apscheduler>=3.10"]
computer-use = ["pyautogui>=0.9.54", "mss>=9.0", "pillow>=10"]
full = [
    "apscheduler>=3.10",
    "pyautogui>=0.9.54",
    "mss>=9.0",
    "pillow>=10",
]

[project.scripts]
agentic = "agentic_engine.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agentic_engine*"]
